<resources>
    <string name="app_name">Calculator</string>

    <string name="inputHint">0</string>
    <string name="resultHint">Result is here</string>
    <string name="lastExpression">Made by Vitallek v1.31</string>

    <string name="oneText">1</string>
    <string name="twoText">2</string>
    <string name="threeText">3</string>
    <string name="fourText">4</string>
    <string name="fiveText">5</string>
    <string name="sixText">6</string>
    <string name="sevenText">7</string>
    <string name="eightText">8</string>
    <string name="nineText">9</string>
    <string name="zeroText">0</string>
    <string name="pointText">.</string>

    <string name="plusText">+</string>
    <string name="minusText">-</string>
    <string name="multiplyText">×</string>
    <string name="multiplyTextMX">*</string>
    <string name="divideText">÷</string>
    <string name="divideTextMX">/</string>
    <string name="equalsText">=</string>

    <string name="percentText">%</string>
    <string name="allClearText">AC</string>
    <string name="backspaceText">⌫</string>

    <string name="openBracketText">(</string>
    <string name="closeBracketText">)</string>
    <string name="numPowerText">^</string>
    <string name="exponentText">e</string>
    <string name="piText">PI</string>
    <string name="piTextMX">pi</string>
    <string name="sinText">sin(</string>
    <string name="cosText">cos(</string>
    <string name="tanText">tan(</string>
    <string name="log10Text">log(</string>
    <string name="historyText">HISTORY</string>


</resources>