<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/previousCalc"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:hint="@string/resultHint"
        android:textColorHint="@color/light_gray"
        android:textSize="30sp"
        android:textAlignment="textEnd"
        android:layout_marginEnd="10dp"

        app:layout_constraintBottom_toTopOf="@+id/inputField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1" />

    <EditText
        android:id="@+id/inputField"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/inputHint"
        android:textColorHint="@color/dark_gray"
        android:textSize="50sp"
        android:textAlignment="textEnd"
        android:layout_marginEnd="10dp"

        android:ems="10"
        android:inputType="textPersonName"
        android:importantForAutofill="no"
        android:background="@null"

        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/previousCalc"
        app:layout_constraintVertical_weight="1" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputField"
        app:layout_constraintVertical_weight="3">

        <Button
            android:id="@+id/button1"
            style="@style/usualButton"
            android:text="@string/oneText"

            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/button2"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button4" />

        <Button
            android:id="@+id/button2"
            style="@style/usualButton"
            android:text="@string/twoText"

            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"

            app:layout_constraintLeft_toRightOf="@+id/button1"
            app:layout_constraintRight_toLeftOf="@+id/button3"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button5"/>

        <Button
            android:id="@+id/button3"
            style="@style/usualButton"
            android:text="@string/threeText"

            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/button2"
            app:layout_constraintRight_toLeftOf="@+id/buttonDivide"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button6"/>

        <Button
            android:id="@+id/buttonDivide"
            style="@style/usualButton"
            android:text="@string/divideText"

            app:layout_constraintBottom_toTopOf="@+id/buttonMul"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/button3"
            app:layout_constraintRight_toRightOf="parent"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_weight="1" />

        <Button
            android:id="@+id/button4"
            style="@style/usualButton"
            android:text="@string/fourText"

            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/button5"

            app:layout_constraintTop_toBottomOf="@+id/button1"
            app:layout_constraintBottom_toTopOf="@+id/button7"/>

        <Button
            android:id="@+id/button5"
            style="@style/usualButton"
            android:text="@string/fiveText"

            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/button4"
            app:layout_constraintRight_toLeftOf="@+id/button6"

            app:layout_constraintTop_toBottomOf="@+id/button2"
            app:layout_constraintBottom_toTopOf="@+id/button8"/>

        <Button
            android:id="@+id/button6"
            style="@style/usualButton"
            android:text="@string/sixText"

            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/button5"
            app:layout_constraintRight_toLeftOf="@+id/buttonMul"

            app:layout_constraintTop_toBottomOf="@+id/button3"
            app:layout_constraintBottom_toTopOf="@+id/button9"/>

        <Button
            android:id="@+id/buttonMul"
            style="@style/usualButton"
            android:text="@string/multiplyText"

            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/button6"
            app:layout_constraintRight_toRightOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/buttonDivide"
            app:layout_constraintBottom_toTopOf="@+id/buttonMinus"/>

        <Button
            android:id="@+id/button7"
            style="@style/usualButton"
            android:text="@string/sevenText"

            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/button8"

            app:layout_constraintTop_toBottomOf="@+id/button4"
            app:layout_constraintBottom_toTopOf="@+id/buttonPoint"/>

        <Button
            android:id="@+id/button8"
            style="@style/usualButton"
            android:text="@string/eightText"

            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/button7"
            app:layout_constraintRight_toLeftOf="@+id/button9"

            app:layout_constraintTop_toBottomOf="@+id/button5"
            app:layout_constraintBottom_toTopOf="@+id/button0"/>

        <Button
            android:id="@+id/button9"
            style="@style/usualButton"
            android:text="@string/nineText"

            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/button8"
            app:layout_constraintRight_toLeftOf="@+id/buttonMinus"

            app:layout_constraintTop_toBottomOf="@+id/button6"
            app:layout_constraintBottom_toTopOf="@+id/buttonPercent"/>

        <Button
            android:id="@+id/buttonMinus"
            style="@style/usualButton"
            android:text="@string/minusText"

            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/button9"
            app:layout_constraintRight_toRightOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/buttonMul"
            app:layout_constraintBottom_toTopOf="@+id/buttonPlus"/>

        <Button
            android:id="@+id/buttonPoint"
            style="@style/usualButton"
            android:text="@string/pointText"

            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/button0"

            app:layout_constraintTop_toBottomOf="@+id/button7"
            app:layout_constraintBottom_toTopOf="@+id/buttonClear" />

        <Button
            android:id="@+id/button0"
            style="@style/usualButton"
            android:text="@string/zeroText"

            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/buttonPoint"
            app:layout_constraintRight_toLeftOf="@+id/buttonPercent"

            app:layout_constraintTop_toBottomOf="@+id/button8"
            app:layout_constraintBottom_toTopOf="@+id/buttonBackspace"/>

        <Button
            android:id="@+id/buttonPercent"
            style="@style/usualButton"
            android:text="@string/percentText"

            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/button0"
            app:layout_constraintRight_toLeftOf="@+id/buttonPlus"

            app:layout_constraintTop_toBottomOf="@+id/button9"
            app:layout_constraintBottom_toTopOf="@+id/buttonBackspace"/>

        <Button
            android:id="@+id/buttonPlus"
            style="@style/usualButton"
            android:text="@string/plusText"

            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/buttonPercent"
            app:layout_constraintRight_toRightOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/buttonMinus"
            app:layout_constraintBottom_toTopOf="@+id/buttonEqual"/>

        <Button
            android:id="@+id/buttonClear"
            style="@style/usualButton"
            android:text="@string/allClearText"

            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/buttonBackspace"

            app:layout_constraintTop_toBottomOf="@+id/buttonPoint"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/buttonBackspace"
            style="@style/usualButton"
            android:contentDescription="@string/backspaceText"

            android:text="@string/backspaceText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/buttonClear"

            app:layout_constraintRight_toLeftOf="@+id/buttonEqual"
            app:layout_constraintTop_toBottomOf="@+id/button0"
            app:layout_constraintVertical_weight="1" />

        <Button
            android:id="@+id/buttonEqual"
            style="@style/equalsButton"
            android:text="@string/equalsText"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintLeft_toRightOf="@+id/buttonBackspace"
            app:layout_constraintRight_toRightOf="parent"

            app:layout_constraintTop_toTopOf="@+id/buttonBackspace"
            app:layout_constraintVertical_weight="1"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>